--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Promise-based Apple iTunes Connect Reporter",
   "main": "lib/index.js",
   "files": [
-    "dist"
+    "lib"
   ],
   "scripts": {
     "build": "babel lib --out-dir dist",
